language/move-lang/tests/move_check/typing/subtype_assign_invalid.exp
error: 

   ┌── tests/move_check/typing/subtype_assign_invalid.move:5:16 ───
   │
 5 │         let x: &mut u64 = &0;
   │                ^^^^^^^^ Invalid type annotation
   ·
 5 │         let x: &mut u64 = &0;
   │                           -- The type: '&u64'
   ·
 5 │         let x: &mut u64 = &0;
   │                -------- Is not a subtype of: '&mut u64'
   │

error: 

    ┌── tests/move_check/typing/subtype_assign_invalid.move:9:22 ───
    │
 10 │         (x, y) = (&0, &0);
    │          ^ Invalid assignment to local 'x'
    ·
 10 │         (x, y) = (&0, &0);
    │                   -- The type: '&u64'
    ·
 9 │         let (x, y): (&mut u64, &mut u64);
    │                      -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_assign_invalid.move:9:32 ───
    │
 10 │         (x, y) = (&0, &0);
    │             ^ Invalid assignment to local 'y'
    ·
 10 │         (x, y) = (&0, &0);
    │                       -- The type: '&u64'
    ·
 9 │         let (x, y): (&mut u64, &mut u64);
    │                                -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_assign_invalid.move:12:22 ───
    │
 13 │         (x, y) = (&0, &0);
    │          ^ Invalid assignment to local 'x'
    ·
 13 │         (x, y) = (&0, &0);
    │                   -- The type: '&u64'
    ·
 12 │         let (x, y): (&mut u64, &u64);
    │                      -------- Is not a subtype of: '&mut u64'
    │

error: 

    ┌── tests/move_check/typing/subtype_assign_invalid.move:15:28 ───
    │
 16 │         (x, y)= (&0, &0);
    │             ^ Invalid assignment to local 'y'
    ·
 16 │         (x, y)= (&0, &0);
    │                      -- The type: '&u64'
    ·
 15 │         let (x, y): (&u64, &mut u64);
    │                            -------- Is not a subtype of: '&mut u64'
    │

